Updating gitignore to ignore all generated files in project after syntetize

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,37 @@ iseconfig
 *.ini
 isim
 *.wdb
+*.map
+*.ncd
+*.xml
+*.xrpt
+*.bgn
+*.bit
+_ngo
+*.pad
+*.stx
+*.drc
+*.pcf
+*.ur
+*.mrp
+*.txt
+*.ngm
+*.bld
+*.cmd_log
+*.lso
+*.ngc
+*.ngd
+*.ngr
+*.par
+*.ptwx
+*.syr
+*.twr
+*.twx
+*.unroutes
+*.ut
+*.xpi
+*.xst
+*.xwbt
+*.csv
+xst
+xlnx*/
